update gltf viewer

--- a/gltf2-viewer/index.html
+++ b/gltf2-viewer/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-<link href="main.58f37739e70788efa9ad.css" rel="stylesheet"></head>
+    <title>glTF2 Viewer</title>
+<link href="main.0e1e75d6083bd4385b95.css" rel="stylesheet"></head>
 <body>
     <div id="root"></div>
-<script type="text/javascript" src="1.58f37739e70788efa9ad.js"></script><script type="text/javascript" src="main.58f37739e70788efa9ad.js"></script></body>
+<script type="text/javascript" src="1.0e1e75d6083bd4385b95.js"></script><script type="text/javascript" src="main.0e1e75d6083bd4385b95.js"></script></body>
 </html>
